dfir_rs/tests/compile-fail-stable/surface_demuxenum_missingtypeparam.rs
../compile-fail/surface_demuxenum_missingtypeparam.rs